# notion_srs_scanner

./: README.md  pyproject.toml
src/: __main__.py
