[tool.poetry]
name = "notion_srs_scanner"
version = "0.1.0"
description = ""
authors = ["Alex Melville"]
# readme = "README.md"
# license = "BSD"
packages = [{ include = "notion_srs_scanner" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
